@@ -7,13 +7,11 @@ trait AR { this: ScalaDsl =>
   val اذاً = new Step("اذاً")
   val ثم = new Step("ثم")
 }
-
 trait BG { this: ScalaDsl =>
   val Дадено = new Step("Дадено")
   val Когато = new Step("Когато")
   val То = new Step("То")
 }
-
 trait CA { this: ScalaDsl =>
   val Donat = new Step("Donat")
   val Donada = new Step("Donada")
@@ -23,39 +21,33 @@ trait CA { this: ScalaDsl =>
   val Aleshores = new Step("Aleshores")
   val Cal = new Step("Cal")
 }
-
 trait CS { this: ScalaDsl =>
   val Pokud = new Step("Pokud")
   val Když = new Step("Když")
   val Pak = new Step("Pak")
 }
-
-trait CYGB { this: ScalaDsl =>
+trait CY_GB { this: ScalaDsl =>
   val anrhegediga = new Step("anrhegediga")
   val Pryd = new Step("Pryd")
   val Yna = new Step("Yna")
 }
-
 trait DA { this: ScalaDsl =>
   val Givet = new Step("Givet")
   val Når = new Step("Når")
   val Så = new Step("Så")
 }
-
 trait DE { this: ScalaDsl =>
   val Angenommen = new Step("Angenommen")
   val Gegebensei = new Step("Gegebensei")
   val Wenn = new Step("Wenn")
   val Dann = new Step("Dann")
 }
-
 trait EN { this: ScalaDsl =>
   val Given = new Step("Given")
   val When = new Step("When")
   val Then = new Step("Then")
 }
-
-trait ENSCOUSE { this: ScalaDsl =>
+trait EN_SCOUSE { this: ScalaDsl =>
   val Givun = new Step("Givun")
   val Youseknowwhenyousegot = new Step("Youseknowwhenyousegot")
   val Wun = new Step("Wun")
@@ -63,43 +55,36 @@ trait ENSCOUSE { this: ScalaDsl =>
   val Dun = new Step("Dun")
   val Denyousegotta = new Step("Denyousegotta")
 }
-
-trait ENAU { this: ScalaDsl =>
+trait EN_AU { this: ScalaDsl =>
   val Yaknowhow = new Step("Yaknowhow")
   val When = new Step("When")
   val Yagotta = new Step("Yagotta")
 }
-
-trait ENLOL { this: ScalaDsl =>
+trait EN_LOL { this: ScalaDsl =>
   val ICANHAZ = new Step("ICANHAZ")
   val WEN = new Step("WEN")
   val DEN = new Step("DEN")
 }
-
-trait ENTX { this: ScalaDsl =>
+trait EN_TX { this: ScalaDsl =>
   val Givenyall = new Step("Givenyall")
   val Whenyall = new Step("Whenyall")
   val Thenyall = new Step("Thenyall")
 }
-
 trait ES { this: ScalaDsl =>
   val Dado = new Step("Dado")
   val Cuando = new Step("Cuando")
   val Entonces = new Step("Entonces")
 }
-
 trait ET { this: ScalaDsl =>
   val Eeldades = new Step("Eeldades")
   val Kui = new Step("Kui")
   val Siis = new Step("Siis")
 }
-
 trait FI { this: ScalaDsl =>
   val Oletetaan = new Step("Oletetaan")
   val Kun = new Step("Kun")
   val Niin = new Step("Niin")
 }
-
 trait FR { this: ScalaDsl =>
   val Soit = new Step("Soit")
   val Etantdonné = new Step("Etantdonné")
@@ -108,14 +93,12 @@ trait FR { this: ScalaDsl =>
   val Lorsqu = new Step("Lorsqu")
   val Alors = new Step("Alors")
 }
-
 trait HE { this: ScalaDsl =>
   val בהינתן = new Step("בהינתן")
   val כאשר = new Step("כאשר")
   val אז = new Step("אז")
   val אזי = new Step("אזי")
 }
-
 trait HR { this: ScalaDsl =>
   val Zadan = new Step("Zadan")
   val Zadani = new Step("Zadani")
@@ -124,31 +107,26 @@ trait HR { this: ScalaDsl =>
   val Kad = new Step("Kad")
   val Onda = new Step("Onda")
 }
-
 trait HU { this: ScalaDsl =>
   val Ha = new Step("Ha")
   val Majd = new Step("Majd")
   val Akkor = new Step("Akkor")
 }
-
 trait ID { this: ScalaDsl =>
   val Dengan = new Step("Dengan")
   val Ketika = new Step("Ketika")
   val Maka = new Step("Maka")
 }
-
 trait IT { this: ScalaDsl =>
   val Dato = new Step("Dato")
   val Quando = new Step("Quando")
   val Allora = new Step("Allora")
 }
-
 trait JA { this: ScalaDsl =>
   val 前提 = new Step("前提")
   val もし = new Step("もし")
   val ならば = new Step("ならば")
 }
-
 trait KO { this: ScalaDsl =>
   val 조건 = new Step("조건")
   val 먼저 = new Step("먼저")
@@ -156,70 +134,59 @@ trait KO { this: ScalaDsl =>
   val 만약 = new Step("만약")
   val 그러면 = new Step("그러면")
 }
-
 trait LT { this: ScalaDsl =>
   val Duota = new Step("Duota")
   val Kai = new Step("Kai")
   val Tada = new Step("Tada")
 }
-
 trait LV { this: ScalaDsl =>
   val Kad = new Step("Kad")
   val Ja = new Step("Ja")
   val Tad = new Step("Tad")
 }
-
 trait NL { this: ScalaDsl =>
   val Gegeven = new Step("Gegeven")
   val Stel = new Step("Stel")
   val Als = new Step("Als")
   val Dan = new Step("Dan")
 }
-
 trait NO { this: ScalaDsl =>
   val Gitt = new Step("Gitt")
   val Når = new Step("Når")
   val Så = new Step("Så")
 }
-
 trait PL { this: ScalaDsl =>
   val Zakładając = new Step("Zakładając")
   val Jeżeli = new Step("Jeżeli")
   val Wtedy = new Step("Wtedy")
 }
-
 trait PT { this: ScalaDsl =>
   val Dado = new Step("Dado")
   val Quando = new Step("Quando")
   val Então = new Step("Então")
   val Entao = new Step("Entao")
 }
-
 trait RO { this: ScalaDsl =>
   val Daca = new Step("Daca")
   val Cand = new Step("Cand")
   val Atunci = new Step("Atunci")
 }
-
-trait RORO { this: ScalaDsl =>
+trait RO_RO { this: ScalaDsl =>
   val Dacă = new Step("Dacă")
   val Când = new Step("Când")
   val Atunci = new Step("Atunci")
 }
-
 trait RU { this: ScalaDsl =>
   val Допустим = new Step("Допустим")
   val Если = new Step("Если")
   val То = new Step("То")
 }
-
 trait SK { this: ScalaDsl =>
   val Pokiaľ = new Step("Pokiaľ")
   val Keď = new Step("Keď")
   val Tak = new Step("Tak")
 }
-
-trait SRCYRL { this: ScalaDsl =>
+trait SR_CYRL { this: ScalaDsl =>
   val Задато = new Step("Задато")
   val Задате = new Step("Задате")
   val Задати = new Step("Задати")
@@ -227,8 +194,7 @@ trait SRCYRL { this: ScalaDsl =>
   val Кад = new Step("Кад")
   val Онда = new Step("Онда")
 }
-
-trait SRLATN { this: ScalaDsl =>
+trait SR_LATN { this: ScalaDsl =>
   val Zadato = new Step("Zadato")
   val Zadate = new Step("Zadate")
   val Zatati = new Step("Zatati")
@@ -236,40 +202,40 @@ trait SRLATN { this: ScalaDsl =>
   val Kad = new Step("Kad")
   val Onda = new Step("Onda")
 }
-
 trait SV { this: ScalaDsl =>
   val Givet = new Step("Givet")
   val När = new Step("När")
   val Så = new Step("Så")
 }
-
 trait TR { this: ScalaDsl =>
   val Diyelimki = new Step("Diyelimki")
   val Eğerki = new Step("Eğerki")
   val Ozaman = new Step("Ozaman")
 }
-
+trait UK { this: ScalaDsl =>
+  val Припустимо = new Step("Припустимо")
+  val Припустимощо = new Step("Припустимощо")
+  val Нехай = new Step("Нехай")
+  val Якщо = new Step("Якщо")
+  val То = new Step("То")
+}
 trait UZ { this: ScalaDsl =>
   val Агар = new Step("Агар")
   val Унда = new Step("Унда")
 }
-
 trait VI { this: ScalaDsl =>
   val Biết = new Step("Biết")
   val Cho = new Step("Cho")
   val Khi = new Step("Khi")
   val Thì = new Step("Thì")
 }
-
-trait ZHCN { this: ScalaDsl =>
+trait ZH_CN { this: ScalaDsl =>
   val 假如 = new Step("假如")
   val 当 = new Step("当")
   val 那么 = new Step("那么")
 }
-
-trait ZHTW { this: ScalaDsl =>
+trait ZH_TW { this: ScalaDsl =>
   val 假設 = new Step("假設")
   val 當 = new Step("當")
   val 那麼 = new Step("那麼")
 }
-
